# ferrisdb

./: .gitignore  .markdownlint.json  .prettierignore  .prettierrc  CLAUDE.md  CONTENT-AUDIT-PLAN.md  CONTENT-AUDIT-PROGRESS.md  CONTRIBUTING.md  Cargo.toml  DESIGN.md  DEVELOPMENT.md  GUIDELINES-AUDIT-REPORT.md  NAVIGATION-AUDIT-REPORT.md  NAVIGATION-STRUCTURE.md  README.md  ROADMAP.md  SECURITY.md  STORAGE_ENGINE_DESIGN.md  TODO.md  TUTORIAL-01-AUDIT.md  TUTORIAL-01-FIXES.md  _typos.toml  deny.toml
.devcontainer/: devcontainer.json
.github/: CODEOWNERS  FUNDING.yml  branch-protection.json  dependabot.yml  pull_request_template.md
.github/scripts/: setup-branch-protection.sh
.github/workflows/: README.md  ci.yml  deploy-docs.yml  docs.yml  pr-review-check.yml  release.yml  rust-ci.yml  security.yml
blog/: day-1-building-ferrisdb-foundations.md
docs/: 404.html  CNAME  Gemfile  MIGRATION-PLAN.md  README.md  TRIGGER_REBUILD.md  _config.yml  architecture.md  astro.config.mjs  blog.md  claude-blog.md  faq.md  future-architecture.md  getting-started.md  how-we-work.md  index.md  lsm-trees-deep-dive.md  package-lock.json  package.json  start-here.md  start.md  storage-engine.md  try-locally.md  wal-crash-recovery.md
ferrisdb-client/: Cargo.toml
ferrisdb-core/: Cargo.toml
ferrisdb-docs/: README.md  astro.config.mjs  package-lock.json  package.json
ferrisdb-server/: Cargo.toml
ferrisdb-server/src/: lib.rs
ferrisdb-storage/: Cargo.toml
ferrisdb-storage/src/: config.rs  lib.rs  storage_engine.rs
ferrisdb-storage/src/memtable/: mem_table.rs  memtable.rs  mod.rs  skip_list.rs  skiplist.rs
ferrisdb-storage/src/sstable/: mod.rs  reader.rs  writer.rs
ferrisdb-storage/src/wal/: log_entry.rs  mod.rs  reader.rs  writer.rs
ferrisdb-tutorials/: Cargo.toml  README.md
ferrisdb-tutorials/tutorial-01-kv-store/: Cargo.toml  README.md
ferrisdb-tutorials/tutorial-01-kv-store/benches/: performance.rs
ferrisdb-tutorials/tutorial-01-kv-store/examples/: exercises.rs
ferrisdb-tutorials/tutorial-01-kv-store/examples/exercises/: README.md  challenge_01_delete.rs  challenge_02_ttl.rs  challenge_03_case_insensitive.rs  challenge_04_prefix_scan.rs
ferrisdb-tutorials/tutorial-01-kv-store/examples/exercises/solutions/: challenge_02_solution.rs  challenge_03_solution.rs
ferrisdb-tutorials/tutorial-01-kv-store/exercises/: challenge_01_delete.rs  challenge_02_ttl.rs  challenge_03_case_insensitive.rs  challenge_04_prefix_scan.rs
ferrisdb-tutorials/tutorial-01-kv-store/exercises/solutions/: challenge_01_solution.rs  challenge_04_solution.rs
ferrisdb-tutorials/tutorial-01-kv-store/scripts/: verify-sync.sh
ferrisdb-tutorials/tutorial-01-kv-store/src/: lib.rs  main.rs
ferrisdb-tutorials/tutorial-01-kv-store/tests/: concurrent_tests.rs  exercises.rs  integration_tests.rs  solutions.rs  step_01_tests.rs  step_02_tests.rs  step_03_tests.rs
guidelines/: GOVERNANCE.md  GUIDELINES-SUMMARY.md  README.md
src/: lib.rs
(+151 files in other folders)
