[package]
name = "ferrisdb-server"
version = "0.1.0"
edition = "2021"

[dependencies]
ferrisdb-core = { path = "../ferrisdb-core" }
ferrisdb-storage = { path = "../ferrisdb-storage" }
tokio = { version = "1.40", features = ["full"] }
async-trait = "0.1"
tonic = "0.12"
prost = "0.13"
clap = { version = "4.5", features = ["derive"] }
log = "0.4"
env_logger = "0.11"