[package]
name = "ferrisdb-storage"
version = "0.1.0"
edition = "2021"

[dependencies]
ferrisdb-core = { path = "../ferrisdb-core" }
tokio = { version = "1.40", features = ["full"] }
async-trait = "0.1"
serde = { version = "1.0", features = ["derive"] }
bincode = "1.3"
log = "0.4"
bytes = "1.7"
crc32fast = "1.4"
crossbeam = "0.8"
rand = "0.8"
parking_lot = "0.12"
lz4 = "1.24"
snap = "1.1"
tempfile = "3.10"
thiserror = "2.0"

[dev-dependencies]
criterion = "0.5"
proptest = "1.5"
env_logger = "0.11"