[package]
name = "tutorial-01-kv-store"
version = "0.1.0"
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[[bin]]
name = "tutorial-01-kv-store"
path = "src/main.rs"

[dependencies]

[dev-dependencies]
criterion = "0.5"

[[bench]]
name = "performance"
harness = false